[package]
name = "rta-for-fps-latex-gen"
version = "0.2.0"
authors = ["Bennet Bleßmann <bb-github@t-online.de>"]
edition = "2018"
description = "An example usage of rta-for-fps-latex-lib reproducing a few figures from the paper 'Response Time Analysis for Fixed Priority Servers' by Hamann et al"
repository = "https://github.com/Skgland/Response-Time-Analysis-for-Fixed-Priority-Servers"
keywords = ["latex", "diagram", "example"]
categories = ["visualization"]
license = "MIT OR Apache-2.0"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rta-for-fps-lib = { version = "0.2.0", path = "../rta-for-fps-lib" }
rta-for-fps-latex-lib = { version = "0.2.0", path = "../rta-for-fps-latex-lib" }
