[package]
name = "rta-for-fps-latex-lib"
version = "0.2.0"
authors = ["Bennet Bleßmann <bb-github@t-online.de>"]
edition = "2018"
description = "A library intended to be used with rta-for-fps-lib to help generate latex diagrams"
repository = "https://github.com/Skgland/Response-Time-Analysis-for-Fixed-Priority-Servers"
keywords = ["latex", "diagram", "lib"]
categories = ["visualization"]
license = "MIT OR Apache-2.0"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rta-for-fps-lib = {version = "0.2.0", path = "../rta-for-fps-lib"}
