[package]
name = "rta-for-fps-lib"
version = "0.2.0"
authors = ["Bennet Bleßmann <bennet.blessmann@stu.uni-kiel.de>"]
edition = "2018"
description = "An Implementation of the paper 'Response Time Analysis for Fixed Priority Servers' by Hamann et al"
repository = "https://github.com/Skgland/Response-Time-Analysis-for-Fixed-Priority-Servers"
keywords = ["analysis", "lib"]
categories = ["algorithms", "science", "simulation"]
license = "MIT OR Apache-2.0"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
